--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
 	"id": "DragSelectMod",
-	"name": "Better Mouse Controls",
-	"version": "1.0.0",
+	"name": "Drag Select Mod",
+	"version": "1.0.0"
 }
